<resources>
    <string name="app_name">RNG Clone</string>
    <string name="rng_fragment_title">RNG</string>
    <string name="dice_fragment_title">DICE</string>
    <string name="lotto_fragment_title">LOTTO</string>
    <string name="coins_fragment_title">COINS</string>
    <string name="history_button">History</string>
    <string name="settings_button">Settings</string>

    <!--RNG FRAGMENT-->
    <string name="rng_frag_xml">Random Number Generator</string>
    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="numbers_needed">How many numbers do you need?</string>
    <string name="exclude_numbers">Exclude these numbers</string>
    <string name="rng_button_text">generate</string>
    <string name="none">None</string>

    <!--DICE FRAGMENT-->
    <string name="dice_title">Dice Roller</string>
    <string name="dice_num_rolls">How many dice are you rolling?</string>
    <string name="dice_btn_txt1">1</string>
    <string name="dice_btn_txt2">2</string>
    <string name="dice_btn_txt3">3</string>
    <string name="dice_btn_txt4">4</string>
    <string name="dice_num_sides">How many sides does each die have?</string>
    <string name="dice_btn_sides1">4</string>
    <string name="dice_btn_sides2">6</string>
    <string name="dice_btn_sides3">8</string>
    <string name="dice_btn_sides4">10</string>
    <string name="dice_btn_sides5">12</string>
    <string name="dice_btn_sides6">20</string>
    <string name="btn_roll">Roll</string>

    <!--LOTTO FRAGMENT-->
    <string name="lotto_title">Lottery Simulator</string>
    <string name="lotto_question">Which lottery are you simulating?</string>
    <string name="lotto_button">Simulate</string>

    <string-array name="lotto_choices">
        <item>Lotto 6/49</item>
        <item>Lotto 5/40</item>
    </string-array>

    <!--COINS FRAGMENT-->
    <string name="coins_title">Coin Flipper</string>
    <string name="coins_question">How many coins are you flipping?</string>
    <string name="coins_button">Flip</string>

    <!--EXCLUDED ACTIVITY-->
    <string name="excluded_title">NOTE: Changing the minimum/maximum resets this list.</string>
    <string name="excluded_hint">Number to exclude</string>
    <string name="excluded_save">Save</string>
    <string name="add_btn">Add</string>
    <string name="remove">-</string>
</resources>