<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiceFragment">

    <FrameLayout
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dice_title"
            android:textStyle="bold"
            android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/lin_lay_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dice_num_rolls"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sample text"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/lin_lay_1">

        <Button
            android:id="@+id/dice_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_txt1"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/dice_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_txt2"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/dice_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_txt3"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/dice_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_txt4"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_lay_2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dice_num_sides"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sample text"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/lin_lay_3">

        <Button
            android:id="@+id/sides_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_sides1"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/sides_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_sides2"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/sides_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_sides3"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/sides_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_sides4"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/sides_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_sides5"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/sides_6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dice_btn_sides6"
            style="@style/Widget.AppCompat.Button.Colored"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_lay_4">

        <Button
            android:id="@+id/btn_roll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/btn_roll"
            style="@style/Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/lin_lay_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:gravity="end"
            android:text="copy"/>

        <TextView
            android:id="@+id/roll_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:gravity="start"
            android:text="KEEEEEEK"/>
    </LinearLayout>


</RelativeLayout>