<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/excluded_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.excludedNumbers.ExcludedNumbersActivity">

    <include
        android:id="@+id/toolbar_excluded"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/excluded_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_excluded"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/excluded_title"
            android:textSize="20sp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/excluded_lin_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/excluded_title"
        android:orientation="horizontal"
        android:padding="6dp">

        <EditText
            android:id="@+id/excluded_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/excluded_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="9"
            android:maxLines="1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/excluded_add_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:paddingVertical="20dp"
            android:text="@string/add_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/excluded_lin_lay"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingVertical="20dp"
        android:text="@string/excluded_save" />

</RelativeLayout>