<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lotto_main_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context=".ui.pages.LottoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        tools:context=".ui.pages.LottoFragment">

        <FrameLayout
            android:id="@+id/top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textStyle="bold">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lotto_title"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/lotto_lin_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_title"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:layout_weight="1"
                android:text="@string/lotto_question" />

            <Spinner
                android:id="@+id/lotto_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lotto_lin_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lotto_lin_1">

            <Button
                android:id="@+id/lotto_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:paddingVertical="20dp"
                android:text="@string/lotto_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lotto_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lotto_lin_2"
            android:layout_margin="16dp"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/lotto_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>