<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinsFragment"
    android:id="@+id/coins_main_lay">

    <FrameLayout
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/coins_title"
            android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/coins_lin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_title"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/coins_question"/>

        <EditText
            android:id="@+id/coins_input"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:background="@null"
            android:textAlignment="center"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="4"
            android:importantForAutofill="no"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/coins_lin_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coins_lin_1">

        <Button
            android:id="@+id/coins_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coins_button"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coins_lin_2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/coins_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            />

        <TextView
            android:id="@+id/no_heads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            />

        <TextView
            android:id="@+id/no_tails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            />

    </LinearLayout>

</RelativeLayout>